plugins {
    id 'java'
}

sourceCompatibility = '9'
targetCompatibility = '9'

compileJava {
    options.compilerArgs = [
            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
    ]
}


dependencies {
    compile files("${System.getProperty('java.home')}/../lib/tools.jar")
    compile project(':tragulus')
    testCompile 'junit:junit:4.12'
}

jar {
    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': project.version)
    }
}